[gd_scene load_steps=20 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://art/speedUP.png" type="Texture" id=2]
[ext_resource path="res://fonts/xolonium-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/heart.png" type="Texture" id=4]
[ext_resource path="res://art/shield_icon.png" type="Texture" id=5]
[ext_resource path="res://art/bomb.png" type="Texture" id=6]
[ext_resource path="res://art/slowmo.png" type="Texture" id=7]
[ext_resource path="res://art/gun.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=11]
size = 19
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="InputEventAction" id=3]
action = "ui_select"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
size = 28
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 78.0
custom_colors/font_color_shadow = Color( 0.686275, 0.509804, 0.509804, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="GameMode" type="Label" parent="."]
margin_right = 190.0
margin_bottom = 64.0
custom_colors/font_color_shadow = Color( 0.686275, 0.509804, 0.509804, 1 )
custom_fonts/font = SubResource( 11 )
text = "Game mode 1"
align = 1
valign = 1

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_colors/font_color_shadow = Color( 0.686275, 0.509804, 0.509804, 1 )
custom_fonts/font = SubResource( 1 )
text = "Escape dos
 inimigos!"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = -200.0
margin_right = 90.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="PowerIcons" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -303.0
margin_bottom = 75.0

[node name="SpeedPowerUp" type="Sprite" parent="PowerIcons"]
position = Vector2( 267.875, 29.875 )
scale = Vector2( 0.4425, 0.3825 )
texture = ExtResource( 2 )

[node name="SpeedPupLabel" type="Label" parent="PowerIcons/SpeedPowerUp"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -49.4352
margin_top = 27.8432
margin_right = -5.43517
margin_bottom = 104.843
custom_colors/font_color_shadow = Color( 0.686275, 0.509804, 0.509804, 1 )
custom_fonts/font = SubResource( 5 )
text = "Speed
up
30%"
align = 1

[node name="LiveUp" type="Sprite" parent="PowerIcons"]
position = Vector2( 223, 31 )
scale = Vector2( 0.395, 0.447059 )
texture = ExtResource( 4 )

[node name="LiveUpLabel" type="Label" parent="PowerIcons/LiveUp"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -36.5263
margin_right = -50.0
margin_bottom = -4.52632
custom_colors/font_color_shadow = Color( 0.686275, 0.509804, 0.509804, 1 )
custom_fonts/font = SubResource( 6 )
text = "1 up"
align = 1

[node name="Shield" type="Sprite" parent="PowerIcons"]
position = Vector2( 174, 31 )
scale = Vector2( 0.355, 0.33547 )
texture = ExtResource( 5 )

[node name="ShieldLabel" type="Label" parent="PowerIcons/Shield"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -58.0
margin_right = -43.0
margin_bottom = -13.0
custom_colors/font_color_shadow = Color( 0.686275, 0.509804, 0.509804, 1 )
custom_fonts/font = SubResource( 7 )
text = "weak
shield"
align = 1
valign = 1

[node name="SlowMo" type="Sprite" parent="PowerIcons"]
position = Vector2( 80.9998, 30 )
scale = Vector2( 0.355, 0.33547 )
texture = ExtResource( 7 )

[node name="SlowMoLabel" type="Label" parent="PowerIcons/SlowMo"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -75.3518
margin_top = -65.9617
margin_right = -26.3518
margin_bottom = 7.03825
custom_colors/font_color_shadow = Color( 0.686275, 0.509804, 0.509804, 1 )
custom_fonts/font = SubResource( 9 )
text = "Slow
Monster
40%"
align = 1
valign = 1

[node name="Gun" type="Sprite" parent="PowerIcons"]
position = Vector2( 30, 32 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="GunLabel" type="Label" parent="PowerIcons/Gun"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -50.0
margin_right = -50.0
margin_bottom = -26.0
custom_colors/font_color_shadow = Color( 0.686275, 0.509804, 0.509804, 1 )
custom_fonts/font = SubResource( 10 )
text = "Gun"
align = 1
valign = 1

[node name="bomb" type="Sprite" parent="PowerIcons"]
position = Vector2( 127, 31 )
scale = Vector2( 0.421875, 0.391934 )
texture = ExtResource( 6 )

[node name="bombLabel" type="Label" parent="PowerIcons/bomb"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -48.0
margin_right = -50.0
margin_bottom = -11.0
custom_colors/font_color_shadow = Color( 0.686275, 0.509804, 0.509804, 1 )
custom_fonts/font = SubResource( 8 )
text = "Bomb"
align = 1
valign = 1

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
